revert: password viewing process
